--- a/src/assets/knowledge_hub_metadata.json
+++ b/src/assets/knowledge_hub_metadata.json
@@ -1,211 +1,253 @@
 {
-  "knowledgeHubMetadata": {
-    "version": "0.0.1",
-    "description": "This is the metadata file to describe our data. For example, categories, sections, pdfs...",
-    "categories": [
-      {
-        "name": "Maths",
-        "subject": [
-          {
-            "title": "Discrete Math",
-            "description": "The first chapter in the course of Discrete Math",
-            "topics": [
-              {
-                "name": "Logic",
-                "subTopics": [
-                  {
-                    "name": "Propositions"
-                  },
-                  {
-                    "name": "Truth Tables"
-                  },
-                  {
-                    "name": "Tautology and Equivalence"
-                  },
-                  {
-                    "name": "De Morgan's Law"
-                  }
-                ]
-              },
-              {
-                "name": "Sets",
-                "subTopics": [
-                  {
-                    "name": "Definition"
-                  },
-                  {
-                    "name": "Subset-PowerSet"
-                  },
-                  {
-                    "name": "Set Operatiosn"
-                  },
-                  {
-                    "name": "Set Identities"
-                  }
-                ]
-              },
-              {
-                "name": "Counting Methods 1",
-                "subTopics": [
-                  {
-                    "name": "Pie 1"
-                  },
-                  {
-                    "name": "Pie 2"
-                  },
-                  {
-                    "name": "Product Rule 1"
-                  },
-                  {
-                    "name": "Product Rule 2"
-                  }
-                ]
-              },
-              {
-                "name": "Counting Methods 2",
-                "subTopics": [
-                  {
-                    "name": "Permutations"
-                  },
-                  {
-                    "name": "Combinations"
-                  },
-                  {
-                    "name": "Examples"
-                  },
-                  {
-                    "name": "Identities"
-                  }
-                ]
-              },
-              {
-                "name": "Intro to Number Theory",
-                "subTopics": [
-                  {
-                    "name": "Divisibility"
-                  },
-                  {
-                    "name": "Primes"
-                  },
-                  {
-                    "name": "GCD And LCM"
-                  },
-                  {
-                    "name": "Algorithm for GCD"
-                  }
-                ]
-              },
-              {
-                "name": "Pigeonhole Principle",
-                "subTopics": [
-                  {
-                    "name": "Pigeonhole Principle 1"
-                  },
-                  {
-                    "name": "Pigeonhole Principle 2"
-                  },
-                  {
-                    "name": "Application 1"
-                  },
-                  {
-                    "name": "Application 2"
-                  }
-                ]
-              },
-              {
-                "name": "Matrices",
-                "subTopics": [
-                  {
-                    "name": "Definitions"
-                  },
-                  {
-                    "name": "Operations"
-                  }
-                ]
-              },
-              {
-                "name": "Relations",
-                "subTopics": [
-                  {
-                    "name": "Relations"
-                  },
-                  {
-                    "name": "Equivalence Relations"
-                  },
-                  {
-                    "name": "Equivalence Relations and Partitions"
-                  },
-                  {
-                    "name": "Relation Representations"
-                  }
-                ]
-              },
-              {
-                "name": "Mathematical Induction",
-                "subTopics": [
-                  {
-                    "name": "Mathematical Induction 1"
-                  },
-                  {
-                    "name": "Mathematical Induction 2"
-                  },
-                  {
-                    "name": "Mathematical Induction 3"
-                  },
-                  {
-                    "name": "Mathematical Induction 4"
-                  }
-                ]
-              },
-              {
-                "name": "Recursive Sequences",
-                "subTopics": [
-                  {
-                    "name": "Recursive Sequences 1"
-                  },
-                  {
-                    "name": "Recursive Sequences 2"
-                  }
-                ]
-              },
-              {
-                "name": "Graphs and Trees",
-                "subTopics": [
-                  {
-                    "name": "Graphs"
-                  },
-                  {
-                    "name": "The Handshaking Theorem"
-                  },
-                  {
-                    "name": "Trees"
-                  },
-                  {
-                    "name": "Eulerian And Hamiltonian Graphs"
-                  }
-                ]
-              },
-              {
-                "name": "Probability",
-                "subTopics": [
-                  {
-                    "name": "Sample Spaces And Events And Probability"
-                  },
-                  {
-                    "name": "Conditional Probability And Independence Of Events"
-                  },
-                  {
-                    "name": "Examples"
-                  },
-                  {
-                    "name": "Total Probability And Bayes Theorem"
-                  }
-                ]
-              }
-            ]
-          }
-        ]
-      }
-    ]
-  }
+  "version": "0.0.1",
+  "description": "This is the metadata file to describe our data. For example, categories, sections, pdfs...",
+  "categories": [
+    {
+      "name": "Maths",
+      "subjects": [
+        {
+          "title": "Discrete Math",
+          "description": "The first chapter in the course of Discrete Math",
+          "topics": [
+            {
+              "name": "Logic",
+              "subtopics": [
+                {
+                  "name": "Propositions",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Truth Tables",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Tautology and Equivalence",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "De Morgan's Law",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Sets",
+              "subtopics": [
+                {
+                  "name": "Definition",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Subset-PowerSet",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Set Operatiosn",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Set Identities",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Counting Methods 1",
+              "subtopics": [
+                {
+                  "name": "Pie 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Pie 2",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Product Rule 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Product Rule 2",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Counting Methods 2",
+              "subtopics": [
+                {
+                  "name": "Permutations",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Combinations",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Examples",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Identities",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Intro to Number Theory",
+              "subtopics": [
+                {
+                  "name": "Divisibility",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Primes",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "GCD And LCM",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Algorithm for GCD",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Pigeonhole Principle",
+              "subtopics": [
+                {
+                  "name": "Pigeonhole Principle 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Pigeonhole Principle 2",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Application 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Application 2",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Matrices",
+              "subtopics": [
+                {
+                  "name": "Definitions",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Operations",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Relations",
+              "subtopics": [
+                {
+                  "name": "Relations",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Equivalence Relations",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Equivalence Relations and Partitions",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Relation Representations",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Mathematical Induction",
+              "subtopics": [
+                {
+                  "name": "Mathematical Induction 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Mathematical Induction 2",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Mathematical Induction 3",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Mathematical Induction 4",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Recursive Sequences",
+              "subtopics": [
+                {
+                  "name": "Recursive Sequences 1",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Recursive Sequences 2",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Graphs and Trees",
+              "subtopics": [
+                {
+                  "name": "Graphs",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "The Handshaking Theorem",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Trees",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Eulerian And Hamiltonian Graphs",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            },
+            {
+              "name": "Probability",
+              "subtopics": [
+                {
+                  "name": "Sample Spaces And Events And Probability",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Conditional Probability And Independence Of Events",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Examples",
+                  "assetUrl": "https://google.com"
+                },
+                {
+                  "name": "Total Probability And Bayes Theorem",
+                  "assetUrl": "https://google.com"
+                }
+              ]
+            }
+          ]
+        }
+      ]
+    }
+  ]
 }
