--- a/.github/workflows/deploy-github-page.yml
+++ b/.github/workflows/deploy-github-page.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Create 404 Page
-        run: cp ./dist/index.html > ./dist/404.html
+        run: cp ./dist/index.html ./dist/404.html
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
