Incorporated all the subtopics and topics in Subject page. Now user clicks on any links they will be redirected to the associated the subtopic #2

--- a/src/assets/knowledge_hub_metadata.json
+++ b/src/assets/knowledge_hub_metadata.json
@@ -7,7 +7,7 @@
       "subjects": [
         {
           "title": "Discrete Math",
-          "description": "The first chapter in the course of Discrete Math",
+          "description": "Chapters of discrete mathematics",
           "topics": [
             {
               "name": "Logic",
