Implmented breadcrumbs and removed the back button at the top of the page

--- a/src/assets/knowledge_hub_metadata.json
+++ b/src/assets/knowledge_hub_metadata.json
@@ -14,19 +14,19 @@
               "subtopics": [
                 {
                   "name": "Propositions",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1jBAU3fUqZqjaPvJztlIDgdBcBBbNB-DF/view?usp=sharing"
                 },
                 {
                   "name": "Truth Tables",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1BGta1U7MQ7BKWhM7Sn56HDYD2LqvBiRu/view?usp=sharing"
                 },
                 {
                   "name": "Tautology and Equivalence",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1VCjSL4eWP3b8sYcvNLxYkVLS4taDuXCp/view?usp=sharing"
                 },
                 {
                   "name": "De Morgan's Law",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1b_2mMYEXNRnIofvt0krjkDml6WegWY48/view?usp=sharing"
                 }
               ]
             },
@@ -35,19 +35,19 @@
               "subtopics": [
                 {
                   "name": "Definition",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1owB0arLetrMQkV2qEia3ZfgEFV3mvA1R/view?usp=sharing"
                 },
                 {
                   "name": "Subset-PowerSet",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/16fWYMWuB9V1cUnb5luZif1J_KqWjZXFy/view?usp=sharing"
                 },
                 {
                   "name": "Set Operatiosn",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1HtXJqNyJmlR5mqGLB0lu_Hkyly7IyTot/view?usp=sharing"
                 },
                 {
                   "name": "Set Identities",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1aIwCsnjG8MOw-R20S4Iql-sPpVrdJCRF/view?usp=sharing"
                 }
               ]
             },
@@ -56,19 +56,19 @@
               "subtopics": [
                 {
                   "name": "Pie 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1yJN5ml1oFnJI0eE8nzCaekDIQ5f_Xrce/view?usp=sharing"
                 },
                 {
                   "name": "Pie 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1xbDbd_o7lkvjVJ_fxhSMVRW-MZ4y9mCO/view?usp=sharing"
                 },
                 {
                   "name": "Product Rule 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1vPpQQoEdicfYNTHtwAhzbar5jCkR6Cd2/view?usp=sharing"
                 },
                 {
                   "name": "Product Rule 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/16kd-oGiO4Y6SnWH9hQMiNd1g5nGfmkNw/view?usp=sharing"
                 }
               ]
             },
@@ -77,19 +77,19 @@
               "subtopics": [
                 {
                   "name": "Permutations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1j7kQaqn4_sHbATUj44m9037IsbO9Fzxk/view?usp=sharing"
                 },
                 {
                   "name": "Combinations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1AHszKeKcJoN0_Ljz2dtI34vVSo4EsGfW/view?usp=sharing"
                 },
                 {
                   "name": "Examples",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1oCnJexnjsNm9Q7R8ZXVyvJ6f0xC0vy7e/view?usp=sharing"
                 },
                 {
                   "name": "Identities",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1roMBo9twpc9piyW0uuJHfTigfwgSzaNm/view?usp=sharing"
                 }
               ]
             },
@@ -98,19 +98,19 @@
               "subtopics": [
                 {
                   "name": "Divisibility",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1p8MhUCw4GztnOkjZMkI14hm5f7yRY0c0/view?usp=sharing"
                 },
                 {
                   "name": "Primes",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1KmStJHf5himq-9lAdGpdaTLX056ehB4b/view?usp=sharing"
                 },
                 {
                   "name": "GCD And LCM",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1_FQ9Ie-kDbt3-TLMRdPDmGESOEVSkbHp/view?usp=sharing"
                 },
                 {
                   "name": "Algorithm for GCD",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1blA7DAlu3M3lPWRqGGKrAoGmi-0THpk2/view?usp=sharing"
                 }
               ]
             },
@@ -119,19 +119,19 @@
               "subtopics": [
                 {
                   "name": "Pigeonhole Principle 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/11RMBvFH6MH8p2vHtHizum8DggnV61xJT/view?usp=sharing"
                 },
                 {
                   "name": "Pigeonhole Principle 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/10k6KRLGRLC005i0HGrh89V8Vu1fVHkle/view?usp=sharing"
                 },
                 {
                   "name": "Application 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1KMOrr0FbXkDuKA54ihvFLul5mvCsqqok/view?usp=sharing"
                 },
                 {
                   "name": "Application 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1UMe_xLwoWpR9uIcTndlcVQG2T5hhksBr/view?usp=sharing"
                 }
               ]
             },
@@ -140,11 +140,11 @@
               "subtopics": [
                 {
                   "name": "Definitions",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1IMHMlz2nflF1KOZYdo6V4-zMcK3VPzkD/view?usp=sharing"
                 },
                 {
                   "name": "Operations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1xxoT2PegTCgisUnnraO8bT7Tz_S74mEo/view?usp=sharing"
                 }
               ]
             },
@@ -153,19 +153,19 @@
               "subtopics": [
                 {
                   "name": "Relations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1nse9GVc47y_HQ0fFpp9PXO7Kkl9CMw4A/view?usp=sharing"
                 },
                 {
                   "name": "Equivalence Relations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1uG87GJ0apn8CJNIpQlYurAcS9hB7SvHH/view?usp=sharing"
                 },
                 {
                   "name": "Equivalence Relations and Partitions",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1vFJ9wbRqixCfs_YxsHA5jZV3ET8yty50/view?usp=sharing"
                 },
                 {
                   "name": "Relation Representations",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1sYaMump6NGE1dW_VK94EoLke81scyXCu/view?usp=sharing"
                 }
               ]
             },
@@ -174,19 +174,19 @@
               "subtopics": [
                 {
                   "name": "Mathematical Induction 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/10Lxprfffkyev7ZdGafXaLMPJzuzj10dG/view?usp=sharing"
                 },
                 {
                   "name": "Mathematical Induction 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1fHAOOwMPRmP9XOCPFNEBqaEbVn8Dw_ud/view?usp=sharing"
                 },
                 {
                   "name": "Mathematical Induction 3",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1OXXHMNENz1j_XG9_WEAURONsDpNl6U_M/view?usp=sharing"
                 },
                 {
                   "name": "Mathematical Induction 4",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1k64MrqVkmiyf9D7ZKuuLC1x57zmMcx4h/view?usp=sharing"
                 }
               ]
             },
@@ -195,11 +195,11 @@
               "subtopics": [
                 {
                   "name": "Recursive Sequences 1",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1NrKpTQ6yW_3LE_dXSjXjvdHCqYqqxYdD/view?usp=sharing"
                 },
                 {
                   "name": "Recursive Sequences 2",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/19y_NbRnCJU1BWpqMS7jgFXq7e4yZjJ1F/view?usp=sharing"
                 }
               ]
             },
@@ -208,19 +208,19 @@
               "subtopics": [
                 {
                   "name": "Graphs",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1-q0lVQNzOPoB8qmogagUA6b6V9unl3s0/view?usp=sharing"
                 },
                 {
                   "name": "The Handshaking Theorem",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/19rjlkzGgmHfGDWlrk2ZpSm_IVC2NFR-s/view?usp=sharing"
                 },
                 {
                   "name": "Trees",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1s9pxYH9wnMBJ1x1xAMMxMc2ktZ8GF8F5/view?usp=sharing"
                 },
                 {
                   "name": "Eulerian And Hamiltonian Graphs",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/13o7UuHEVyeBPY3QcsQuQJVD6KrQEWkAy/view?usp=sharing"
                 }
               ]
             },
@@ -229,19 +229,19 @@
               "subtopics": [
                 {
                   "name": "Sample Spaces And Events And Probability",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1o6EAjJuMEa26MymQUjaUCyAawAYaAl5B/view?usp=sharing"
                 },
                 {
                   "name": "Conditional Probability And Independence Of Events",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1tTEpfLtmKMuA7o_eYXslRNIAyjE2UFeT/view?usp=sharing"
                 },
                 {
                   "name": "Examples",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1LOUS60TlcZvp8p7ANWDMlD1P3yLnSssD/view?usp=sharing"
                 },
                 {
                   "name": "Total Probability And Bayes Theorem",
-                  "assetUrl": "https://google.com"
+                  "assetUrl": "https://drive.google.com/file/d/1Yr8EyvBr5OLi_Xlxpo4_OO6Wj1hWxqhI/view?usp=sharing"
                 }
               ]
             }
