--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@react-pdf/renderer": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "pdfjs-dist": "^4.2.67",
     "sass": "^1.76.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
