Fix worker src, reroute assetUrl to point to the local pdf file

--- a/src/assets/knowledge_hub_metadata.json
+++ b/src/assets/knowledge_hub_metadata.json
@@ -14,7 +14,7 @@
               "subtopics": [
                 {
                   "name": "Propositions",
-                  "assetUrl": "https://drive.google.com/file/d/1jBAU3fUqZqjaPvJztlIDgdBcBBbNB-DF/view?usp=sharing"
+                  "assetUrl": "resources/pdffiles/discretemath/01_logic_01_definition.pdf"
                 },
                 {
                   "name": "Truth Tables",
