--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@react-hook/resize-observer": "^2.0.1",
     "@react-pdf/renderer": "^3.4.4",
+    "@wojtekmaj/react-hooks": "^1.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^8.0.2",
@@ -34,6 +36,7 @@
     "pdfjs-dist": "^4.2.67",
     "sass": "^1.76.0",
     "typescript": "^5.2.2",
+    "use-resize-observer": "^9.1.0",
     "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.3.1"
   }
