--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "pdfjs-dist": "^4.2.67",
     "sass": "^1.76.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "use-resize-observer": "^9.1.0",
     "vite": "^5.1.4",
