Search bar done successfully. Also added the topic page, which currently displays only the topics. Will come back to it later and decide what to do with it

--- a/src/assets/knowledge_hub_metadata.json
+++ b/src/assets/knowledge_hub_metadata.json
@@ -42,7 +42,7 @@
                   "assetUrl": "resources/pdffiles/discretemath/02_set_theory_02_subset_power_set.pdf"
                 },
                 {
-                  "name": "Set Operatiosn",
+                  "name": "Set Operations",
                   "assetUrl": "resources/pdffiles/discretemath/02_set_theory_03_set_operations.pdf"
                 },
                 {
