--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wojtekmaj/react-hooks": "^1.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3"
   },
